[gd_scene format=3 uid="uid://beb8r8x8mvsd0"]

[ext_resource type="Script" uid="uid://badpraaem18vy" path="res://Scripts/Game.gd" id="1_h7scd"]

[sub_resource type="FontVariation" id="FontVariation_h7scd"]
variation_embolden = 2.0

[node name="Level2_tscn" type="Node2D" unique_id=1053742045]
script = ExtResource("1_h7scd")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1199998436]

[node name="Pausemenu" type="ColorRect" parent="CanvasLayer" unique_id=948463415]
visible = false
offset_right = 1150.0
offset_bottom = 644.0
color = Color(0, 0, 0, 0.2784314)

[node name="Resume" type="Button" parent="CanvasLayer/Pausemenu" unique_id=1796029756]
layout_mode = 0
offset_left = 411.0
offset_top = 145.0
offset_right = 756.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 58
text = "Resume"

[node name="Quit" type="Button" parent="CanvasLayer/Pausemenu" unique_id=362003171]
layout_mode = 0
offset_left = 464.0
offset_top = 264.0
offset_right = 696.0
offset_bottom = 351.0
theme_override_font_sizes/font_size = 58
text = "Quit"

[node name="Pause" type="Button" parent="CanvasLayer" unique_id=1727756679]
offset_right = 48.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0, 0.83702254, 0.7582753, 1)
theme_override_fonts/font = SubResource("FontVariation_h7scd")
theme_override_font_sizes/font_size = 29
text = "||"

[connection signal="pressed" from="CanvasLayer/Pausemenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Pausemenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause" to="." method="_on_pause_pressed"]
